frontend/test/should_pass/emit_009.grg
using enum_model_001;

rule r1(x:Node) {
  y:A;
  replace {
    exec(r1(y));
  }
}

