frontend/test/should_fail/emit_010.grg
using enum_model_001;

rule r1(x:A) {
  y:Node;
  modify{
    exec(r1(x, y));
  }
}

